working on view balance
'

--- a/tenmo-server/src/main/resources/application.properties
+++ b/tenmo-server/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # datasource connection properties
-spring.datasource.url=jdbc:postgresql://localhost:5432/tenmo
-spring.datasource.name=tenmo
+spring.datasource.url=jdbc:postgresql://localhost:5432/TEnmo
+spring.datasource.name=TEnmo
 spring.datasource.username=postgres
 spring.datasource.password=postgres1
 
